<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_lec07_exam01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lec07_exam01"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_lec07_exam02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lec07_exam02"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_lec07_exam03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lec07_exam03"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_lec07_exam04"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lec07_exam04"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_lec07_exam05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lec07_exam05"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_lec07_exam06"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lec07_exam06"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_lec07_prac01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lec07_prac01"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_lec07_prac02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lec07_prac02"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn_lec07_prac03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_lec07_prac03"
        android:layout_margin="10dp"/>

</LinearLayout>